--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
- h1>Hello World</h1>
- <p>I'm hosted with GitHub Pages.</p>
+ <h1>Hello World</h1>
+
     
 </body>
 </html>
