--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <h1>
+        MY NAME IS RAMIT GARG.
+    </h1>
 </head>
 <body>
- <h1>Hello World</h1>
-
     
 </body>
 </html>
