--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ram</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>MY NAME I RAMIT</h1>
+    
 </body>
 </html>
